# template-poetry-docker

./: .gitignore  Dockerfile  README.md  pyproject.toml
